Update api by swagger
