# src/libs/api/models/GenTakeOff.ts
@@ -3,9 +3,7 @@
 /* tslint:disable */
 /* eslint-disable */
 
-export type Login = {
-    username?: string;
-    email?: string;
-    password: string;
+export type GenTakeOff = {
+    order: number;
 };
 
