# src/libs/api/models/PasswordReset.ts
@@ -3,9 +3,10 @@
 /* tslint:disable */
 /* eslint-disable */
 
-export type Login = {
-    username?: string;
-    email?: string;
-    password: string;
+/**
+ * Serializer for requesting a password reset e-mail.
+ */
+export type PasswordReset = {
+    email: string;
 };
 
