# swagger.yaml
@@ -873,9 +873,171 @@ paths:
       responses:
         '200':
           description: No response body
-  /dj-rest-auth/password/reset/confirm/{uidb64}/{token}/:
+  /dj-rest-auth/login/:
+    post:
+      operationId: dj_rest_auth_login_create
+      description: |-
+        Check the credentials and return the REST Token
+        if the credentials are valid and authenticated.
+        Calls Django Auth login method to register User ID
+        in Django session framework
+
+        Accept the following POST parameters: username, password
+        Return the REST Framework Token Object's key.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Login'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Login'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Login'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JWT'
+          description: ''
+  /dj-rest-auth/logout/:
+    post:
+      operationId: dj_rest_auth_logout_create
+      description: |-
+        Calls Django logout method and delete the Token object
+        assigned to the current User object.
+
+        Accepts/Returns nothing.
+      tags:
+      - dj-rest-auth
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestAuthDetail'
+          description: ''
+  /dj-rest-auth/password/change/:
+    post:
+      operationId: dj_rest_auth_password_change_create
+      description: |-
+        Calls Django Auth SetPasswordForm save method.
+
+        Accepts the following POST parameters: new_password1, new_password2
+        Returns the success/fail message.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordChange'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PasswordChange'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PasswordChange'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestAuthDetail'
+          description: ''
+  /dj-rest-auth/password/reset/:
+    post:
+      operationId: dj_rest_auth_password_reset_create
+      description: |-
+        Calls Django Auth PasswordResetForm save method.
+
+        Accepts the following POST parameters: email
+        Returns the success/fail message.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordReset'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PasswordReset'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PasswordReset'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestAuthDetail'
+          description: ''
+  /dj-rest-auth/password/reset/confirm/:
     post:
       operationId: dj_rest_auth_password_reset_confirm_create
+      description: |-
+        Password reset e-mail link is confirmed, therefore
+        this resets the user's password.
+
+        Accepts the following POST parameters: token, uid,
+            new_password1, new_password2
+        Returns the success/fail message.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordResetConfirm'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PasswordResetConfirm'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PasswordResetConfirm'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestAuthDetail'
+          description: ''
+  /dj-rest-auth/password/reset/confirm/{uidb64}/{token}/:
+    post:
+      operationId: dj_rest_auth_password_reset_confirm_create_2
       description: |-
         Password reset e-mail link is confirmed, therefore
         this resets the user's password.
@@ -919,6 +1081,156 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RestAuthDetail'
+          description: ''
+  /dj-rest-auth/token/refresh/:
+    post:
+      operationId: dj_rest_auth_token_refresh_create
+      description: |-
+        Takes a refresh type JSON web token and returns an access type JSON web
+        token if the refresh token is valid.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TokenRefresh'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/TokenRefresh'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/TokenRefresh'
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenRefresh'
+          description: ''
+  /dj-rest-auth/token/verify/:
+    post:
+      operationId: dj_rest_auth_token_verify_create
+      description: |-
+        Takes a token and indicates if it is valid.  This view provides no
+        information about a token's fitness for a particular use.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TokenVerify'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/TokenVerify'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/TokenVerify'
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenVerify'
+          description: ''
+  /dj-rest-auth/user/:
+    get:
+      operationId: dj_rest_auth_user_retrieve
+      description: |-
+        Reads and updates UserModel fields
+        Accepts GET, PUT, PATCH methods.
+
+        Default accepted fields: username, first_name, last_name
+        Default display fields: pk, username, email, first_name, last_name
+        Read-only fields: pk, email
+
+        Returns UserModel fields.
+      tags:
+      - dj-rest-auth
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDetails'
+          description: ''
+    put:
+      operationId: dj_rest_auth_user_update
+      description: |-
+        Reads and updates UserModel fields
+        Accepts GET, PUT, PATCH methods.
+
+        Default accepted fields: username, first_name, last_name
+        Default display fields: pk, username, email, first_name, last_name
+        Read-only fields: pk, email
+
+        Returns UserModel fields.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDetails'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/UserDetails'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/UserDetails'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDetails'
+          description: ''
+    patch:
+      operationId: dj_rest_auth_user_partial_update
+      description: |-
+        Reads and updates UserModel fields
+        Accepts GET, PUT, PATCH methods.
+
+        Default accepted fields: username, first_name, last_name
+        Default display fields: pk, username, email, first_name, last_name
+        Read-only fields: pk, email
+
+        Returns UserModel fields.
+      tags:
+      - dj-rest-auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchedUserDetails'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PatchedUserDetails'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PatchedUserDetails'
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDetails'
           description: ''
   /inventory/:
     get:
@@ -1085,7 +1397,7 @@ paths:
       operationId: member_card_reissue_create
       parameters:
       - in: query
-        name: id
+        name: twid
         schema:
           type: string
         description: twid_record
@@ -1180,7 +1492,7 @@ paths:
         \ status(EXPIRED = 0 CURRENT = 1)"
       parameters:
       - in: query
-        name: id
+        name: twid
         schema:
           type: string
         description: twid_record
@@ -1334,7 +1646,7 @@ paths:
       operationId: member_upgrade_create
       parameters:
       - in: query
-        name: id
+        name: twid
         schema:
           type: string
         description: twid_record
@@ -1985,7 +2297,7 @@ paths:
       operationId: trade_order_buy_create
       parameters:
       - in: query
-        name: id
+        name: twid
         schema:
           type: string
         description: twid_record
@@ -2057,7 +2369,7 @@ paths:
       description: sell=1
       parameters:
       - in: query
-        name: id
+        name: twid
         schema:
           type: string
         description: twid_record
@@ -2086,24 +2398,39 @@ paths:
               schema:
                 $ref: '#/components/schemas/Order'
           description: ''
-  /trade/order_sell/{id}/:
-    delete:
-      operationId: trade_order_sell_destroy
+  /trade/order_sell/take_off/:
+    post:
+      operationId: trade_order_sell_take_off_create
       parameters:
-      - in: path
-        name: id
+      - in: query
+        name: twid
         schema:
-          type: integer
-        required: true
+          type: string
+        description: twid_record
       tags:
       - trade
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderSellDelete'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/OrderSellDelete'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/OrderSellDelete'
       security:
       - jwtAuth: []
       - jwtHeaderAuth: []
       - jwtCookieAuth: []
       responses:
-        '204':
-          description: No response body
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+          description: ''
   /trade/pay_callback/:
     post:
       operationId: trade_pay_callback_create
@@ -2286,6 +2613,34 @@ paths:
       responses:
         '200':
           description: No response body
+  /twid/genPkcs7Tbs/order/take_off/:
+    post:
+      operationId: twid_genPkcs7Tbs_order_take_off_create
+      tags:
+      - twid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenTakeOff'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/GenTakeOff'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/GenTakeOff'
+        required: true
+      security:
+      - jwtAuth: []
+      - jwtHeaderAuth: []
+      - jwtCookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenPkcs7TbsResponse'
+          description: ''
   /twid/genPkcs7Tbs/order_buy/:
     post:
       operationId: twid_genPkcs7Tbs_order_buy_create
@@ -2781,11 +3136,10 @@ components:
           title: 代表人中文姓名
           maxLength: 45
         capital:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
+          type: string
           nullable: true
           title: 實收資本額
+          maxLength: 45
         founding_date:
           type: string
           format: date
@@ -3599,11 +3953,10 @@ components:
           title: 代表人中文姓名
           maxLength: 45
         capital:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
+          type: string
           nullable: true
           title: 實收資本額
+          maxLength: 45
         founding_date:
           type: string
           format: date
@@ -3852,6 +4205,13 @@ components:
       - content
       - hashed_content
       - twid_record
+    GenTakeOff:
+      type: object
+      properties:
+        order:
+          type: integer
+      required:
+      - order
     Group:
       type: object
       properties:
@@ -3876,11 +4236,28 @@ components:
       description: |-
         * `0` - Offline
         * `1` - Online
+    JWT:
+      type: object
+      description: Serializer for JWT authentication.
+      properties:
+        access:
+          type: string
+        refresh:
+          type: string
+        user:
+          $ref: '#/components/schemas/UserDetails'
+      required:
+      - access
+      - refresh
+      - user
     Login:
       type: object
       properties:
         username:
           type: string
+        email:
+          type: string
+          format: email
         password:
           type: string
       required:
@@ -4329,6 +4706,18 @@ components:
       - price
       - quantity
       - sell
+    OrderSellDelete:
+      type: object
+      properties:
+        order:
+          type: integer
+          default: 1
+        pkcs1:
+          type: string
+          default: sacurn_test
+        b64Cert:
+          type: string
+          default: aGVsbG8gd29ybGQ
     PaginatedAuditLogList:
       type: object
       properties:
@@ -4629,6 +5018,27 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/WatchList'
+    PasswordChange:
+      type: object
+      properties:
+        new_password1:
+          type: string
+          maxLength: 128
+        new_password2:
+          type: string
+          maxLength: 128
+      required:
+      - new_password1
+      - new_password2
+    PasswordReset:
+      type: object
+      description: Serializer for requesting a password reset e-mail.
+      properties:
+        email:
+          type: string
+          format: email
+      required:
+      - email
     PasswordResetConfirm:
       type: object
       description: Serializer for confirming a password reset attempt.
@@ -4923,11 +5333,10 @@ components:
           title: 代表人中文姓名
           maxLength: 45
         capital:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
+          type: string
           nullable: true
           title: 實收資本額
+          maxLength: 45
         founding_date:
           type: string
           format: date
@@ -5102,6 +5511,31 @@ components:
           type: integer
         shop_product:
           type: integer
+    PatchedUserDetails:
+      type: object
+      description: User model w/o password
+      properties:
+        pk:
+          type: integer
+          readOnly: true
+          title: ID
+        username:
+          type: string
+          description: Required. 150 characters or fewer. Letters, digits and @/./+/-/_
+            only.
+          pattern: ^[\w.@+-]+$
+          maxLength: 150
+        email:
+          type: string
+          format: email
+          readOnly: true
+          title: Email address
+        first_name:
+          type: string
+          maxLength: 150
+        last_name:
+          type: string
+          maxLength: 150
     PayCallback:
       type: object
       properties:
@@ -5658,6 +6092,35 @@ components:
       - first_name
       - id
       - last_name
+      - username
+    UserDetails:
+      type: object
+      description: User model w/o password
+      properties:
+        pk:
+          type: integer
+          readOnly: true
+          title: ID
+        username:
+          type: string
+          description: Required. 150 characters or fewer. Letters, digits and @/./+/-/_
+            only.
+          pattern: ^[\w.@+-]+$
+          maxLength: 150
+        email:
+          type: string
+          format: email
+          readOnly: true
+          title: Email address
+        first_name:
+          type: string
+          maxLength: 150
+        last_name:
+          type: string
+          maxLength: 150
+      required:
+      - email
+      - pk
       - username
     WatchList:
       type: object
